--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "minimist": "^0.2.1",
+    "mkdir": "0.0.2",
+    "mkdirp": "^1.0.3",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0",
+    "react-scripts": "^3.4.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
