--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "acorn": "^7.1.1",
     "minimist": "^1.2.5",
     "mkdir": "0.0.2",
     "mkdirp": "^1.0.3",
